# Z16-ISA-emulator

./: .gitignore  LICENSE  README.md  assembler.py  bytes_test  counter.py  cpu.py  deassembler.py  emulator.py  instructions.py  main.py  memory.py  peripheral_interface_unit.py  piu.py  pyproject.toml  registers.py  requirements.txt  test  test.z  test_bytes  word.py
emulator/: assembler.py  constants.py  emulator.py  piu.py
emulator/cpu/: cpu.py  registers.py
emulator/devices/: console.py
example/: fibonacci.zed  test.zed  zero.zed
examples/: automata.zed  automata_quine.zed  count.zed  count_from_0_to_9.zed  dice.zed  fibonacci.zed  hello_world.zed  input.zed  quine.zed
zedecim_isa_emulator/: main.py
zedecim_isa_emulator/emulator/: assembler.py  emulator.py  piu.py
zedecim_isa_emulator/emulator/cpu/: cpu.py  deassembler.py  registers.py
zedecim_isa_emulator/emulator/devices/: console.py  random_number_generator.py
zedecim_isa_emulator/emulator/memory/: counter.py  memory.py
